// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render banner banner content 1`] = `
<div
  className="vxteaser-banner vxteaser--has-skew"
  onClick={[Function]}
  style={
    Object {
      "background": "no-repeat url('url0') top right",
      "backgroundSize": "contain",
      "height": "260px",
    }
  }
>
  <BannerContent
    config={
      Object {
        "fixedHeights": Array [
          Object {
            "backgroundUrl": "url0",
            "height": 500,
          },
          Object {
            "backgroundUrl": "url1",
            "greaterThan": 1200,
            "height": 260,
          },
        ],
      }
    }
  />
</div>
`;

exports[`render banner banner content tablet 1`] = `
<div
  className="vxteaser-banner vxteaser--has-no-skew"
  onClick={[Function]}
  style={
    Object {
      "background": "no-repeat url('url1') top right",
      "backgroundSize": "auto",
      "height": "500px",
    }
  }
>
  <BannerContent
    config={
      Object {
        "fixedHeights": Array [
          Object {
            "backgroundUrl": "url0",
            "height": 500,
          },
          Object {
            "backgroundUrl": "url1",
            "greaterThan": 1200,
            "height": 260,
          },
        ],
      }
    }
    windowWidth={768}
  />
</div>
`;

exports[`render banner banner theme 1`] = `
<div
  className="vxteaser-banner vxteaser--has-skew -theme-white"
  onClick={[Function]}
  style={
    Object {
      "background": "no-repeat url('url0') top right",
      "backgroundSize": "contain",
      "height": "260px",
    }
  }
>
  <BannerContent
    config={
      Object {
        "fixedHeights": Array [
          Object {
            "backgroundUrl": "url0",
            "height": 500,
          },
          Object {
            "backgroundUrl": "url1",
            "greaterThan": 1200,
            "height": 260,
          },
        ],
      }
    }
  />
</div>
`;

exports[`render banner empty banner 1`] = `""`;
